add test for draining windows

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -27,8 +27,8 @@ markers =
     laststate: tests using last-state upgrade mode
     draining: tests involving job draining
 
-# Timeout
-timeout = 600  # 10 minutes per test
+# Timeout (10 minutes per test)
+timeout = 600
 timeout_method = thread
 
 # Logging
