--- a/k8s/deployments/stateful-laststate.yaml
+++ b/k8s/deployments/stateful-laststate.yaml
@@ -41,7 +41,7 @@ spec:
               claimName: flink-checkpoints-pvc
           - name: ha-volume
             persistentVolumeClaim:
-              claimName: flink-checkpoints-pvc
+              claimName: flink-savepoints-test
   taskManager:
     resource:
       memory: "1024m"
@@ -66,7 +66,7 @@ spec:
               claimName: flink-checkpoints-pvc
           - name: ha-volume
             persistentVolumeClaim:
-              claimName: flink-checkpoints-pvc
+              claimName: flink-savepoints-test
   job:
     jarURI: local:///opt/flink/usrlib/flink-deployment-test-1.0-SNAPSHOT.jar
     entryClass: com.example.flink.StatefulJob
